# TranslatorMinecraftApp

./: .gitignore  LICENSE
TranslatorMinecraftApp/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
TranslatorMinecraftApp/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
TranslatorMinecraftApp/src-tauri/: Cargo.toml  tauri.conf.json
TranslatorMinecraftApp/src-tauri/icons/: icon.icns
TranslatorMinecraftApp/src-tauri/src/: main.rs
TranslatorMinecraftApp/src/components/layout/: BackgroundEffect.tsx  TitleBar.tsx
TranslatorMinecraftApp/src/components/settings/: AdvancedSettingsContent.tsx  AppearanceSettingsContent.tsx  EndpointSettingsContent.tsx  LlmEndpointDialog.tsx  LocalSettingsContent.tsx  SettingsDialog.tsx
TranslatorMinecraftApp/src/components/tasks/: NewTaskDialog.tsx  TaskDetail.tsx  TaskItem.tsx  TaskList.tsx
TranslatorMinecraftApp/src/components/ui/: badge.tsx  button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  file-picker.tsx  number-input.tsx  select.tsx  tabs.tsx  tooltip.tsx
TranslatorMinecraftApp/src/hooks/: useHooks.ts  useNativeGlass.ts  useTauriApi.ts  useTauriWindow.ts  useTheme.ts
TranslatorMinecraftApp/src/lib/: api.ts  constants.ts  i18n.ts  theme-manager.ts  theme.ts  types.ts
TranslatorMinecraftApp/src/locales/: en-US.json  zh-CN.json
TranslatorMinecraftApp/src/types/: window.d.ts
cpp/qt-gui/: CMakeLists.txt  gui_zh_CN.json
cpp/qt-gui/src/: mainwindow.cpp  pythonbackend.cpp
qt-gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  pythonbackend.cpp  pythonbackend.h
